# awsdesdecero

./: .gitignore  README.md  app.py  freeze.py  pyproject.toml  requirements.txt
static/: scripts.js  styles.css
static/img/: aws-services.pptx
templates/: aws-services.html  base_template.html  contactus.html  gallery.html  gallery_template.html  graph.html  home.html  index.html  posts.html  test.html
templates/archive/: home.html  index-copy.html  nav.html  post.html  pricing.html
templates/aws-services/: 00-Amazon-S3.html  01-Amazon-EC2.html  02-Amazon-ECR.html  03-Amazon-ECS.html  04-Amazon-Elastic-Beanstalk.html  aws-template.html
templates/blog/: bg-01-AWS-es-la-plataforma-líder-en-la-nube.html  bg-01-AWS-es-la-plataforma-líder-en-la-nube.md
templates/diagrams/: 00_graph_index.html  01_Food2Go.html
templates/pages/: contact-us.html
templates/pubs/: aws-00_Cloud-Computing.html  aws-00_Introducción-a-Cloud-Computing.html  aws-00_Qué-es-la-Computación-en-la-Nube-o-Cloud-Computing?.html  aws-01_Comparativa-AWS-vs-GCP-vs-Azure.html  aws-01_Primeros-pasos-con-AWS-|-Principales-servicios.html  aws-02_Porqué-AWS-es-la-plataforma-líder-en-la-nube.html  aws-03_Primeros-pasos-con-AWS-|-Principales-servicios.html  aws-04_Caso-práctico-|-Arquitectura-cloud-de-una-sturtup.html  aws-05_CASO-REAL-|-Despliege-Cloud-de-una-Refinería.html  aws-05_Caso-práctico-AWS.-Despliegue-Cloud-startup-Ionatec  aws-05_Caso-práctico-AWS:-Despliegue-Cloud-startup-Ionatec  aws-05_Despliege-Cloud-de-una-Refinería.html  aws-05_Despliege-cloud-en-operaciones-industriales.html  (+3 more)
(+1 files in other folders)
